@@ -1,4 +1,7 @@
 2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/Relationship.py: fix error with nephew, niece
+
+2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/gramps.py: text error, issue #1342
 
 2007-11-06 Benny Malengier <benny.malengier@gramps-project.org>
